@@ -1,3 +1,9 @@
+2011-12-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/gen.c,
+	  support/regression/tests/gcc-torture-execute-string-opt-5.c:
+	  Fixed bug #3463342.
+
 2012-01-03 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* sdas/as6808/m08ext.c,
